try to fix overflow on mobile

--- a/src/assets/scss/paper-kit/_sections.scss
+++ b/src/assets/scss/paper-kit/_sections.scss
@@ -31,6 +31,7 @@
 .section-dark{
     background-color: #0b1011;
     background-image: url("/assets/img/biopset-dark-background-1920x1080px.jpg");
+    background-size: cover;
 }
 .section-image,
 .section-gold,
